# is-prime

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
