[package]
name = "primality"
version = "0.2.0"
edition = "2021"
authors = ["Yumi Izumi <mail@yumi.to>"]
description = "Check if a number is prime"
documentation = "https://docs.rs/primality"
readme = "README.md"
homepage = "https://github.com/izyuumi/primality"
repository = "https://github.com/izyuumi/primality"
license = "MIT"
keywords = ["prime", "math", "number"]
categories = ["mathematics"]

[dependencies]
num-integer = "0.1.46"
